# barbershop-SLY-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  MIGRATION_GUIDE.md  README.md  alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt
alembic/: __init__.py  env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: reservas.py
app/routes/: appointments.py  auth.py  barbers.py  services.py
