[tool.poetry]
name = "sly-barbershop-backend"
version = "1.0.0"
description = "API REST para gestión de reservas de barbería SLY"
authors = ["SLY Barbershop"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
email-validator = "^2.1.0"
pymysql = "^1.1.2"
psycopg2-binary = "^2.9.11"
pg8000 = "^1.31.5"
asyncpg = "^0.31.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
